# DataPeCharcha

./: .gitignore  README.md  main.py  nb.ipynb  pyproject.toml
ANN-pytorch/: ANN_imp.ipynb  model.pt
CNN-pytorch/: CNN-implementation.ipynb  visual1.py  visual2.py
CNN-regularization/: notebook.ipynb  visuals.ipynb
Confidence-Intervals/: visual1.py  visual2.py  visual3.py  visual4.py  visual5.py
Momentum GD/: viz1.py  viz2.py  viz3.py  viz4.py
NAG/: viz1.py
SGD-Viz/: README.md  app.py  requirements.txt  visualization.py
TransferLearning-pytorch/: notebook.ipynb  visual1.py  visual2.py
attention/: bonus.ipynb  implementation.ipynb
experiment-tracking/: demo.ipynb
recommendations/: nb.ipynb
